--- a/index.html
+++ b/index.html
@@ -115,16 +115,16 @@
               <p> The quality of being able to be reached or entered </p>
   
               <div class="row synonyms-list">
-                <p class="synonym"> <a href="/"> Convenience </a> </p>
-                <p class="synonym"> <a href="/"> Handiness </a> </p>
-                <p class="synonym"> <a href="/"> Availability </a> </p>
-                <p class="synonym"> <a href="/"> Attainability </a> </p>
-                <p class="synonym"> <a href="/"> Readiness </a> </p>
-                <p class="synonym"> <a href="/"> Nearness </a> </p>
-                <p class="synonym"> <a href="/"> Exposedness </a> </p>
-                <p class="synonym"> <a href="/"> Possibility </a> </p>
-                <p class="synonym"> <a href="/"> Reachability </a> </p>
-                <p class="synonym"> <a href="/"> Susceptibility </a> </p>
+                <p class="synonym"> <a href="/not-found"> Convenience </a> </p>
+                <p class="synonym"> <a href="/not-found"> Handiness </a> </p>
+                <p class="synonym"> <a href="/not-found"> Availability </a> </p>
+                <p class="synonym"> <a href="/not-found"> Attainability </a> </p>
+                <p class="synonym"> <a href="/not-found"> Readiness </a> </p>
+                <p class="synonym"> <a href="/not-found"> Nearness </a> </p>
+                <p class="synonym"> <a href="/not-found"> Exposedness </a> </p>
+                <p class="synonym"> <a href="/not-found"> Possibility </a> </p>
+                <p class="synonym"> <a href="/not-found"> Reachability </a> </p>
+                <p class="synonym"> <a href="/not-found"> Susceptibility </a> </p>
               </div>
   
               <p class="italicize"> “Reliable and affordable public transport determines accessibility to both employment and housing.” </p>
@@ -138,19 +138,19 @@
               <p> The quality of being easily understood or appreciated </p>
   
               <div class="row synonyms-list">
-                <p class="synonym"> <a href="/"> Comprehensibility </a> </p>
-                <p class="synonym"> <a href="/"> Intelligibility </a> </p>
-                <p class="synonym"> <a href="/"> Understandability </a> </p>
-                <p class="synonym"> <a href="/"> Approachability </a> </p>
-                <p class="synonym"> <a href="/"> Penetrability </a> </p>
-                <p class="synonym"> <a href="/"> User-friendliness </a> </p>
-                <p class="synonym"> <a href="/"> Ease of Understanding </a> </p>
-                <p class="synonym"> <a href="/"> Coherence </a> </p>
-                <p class="synonym"> <a href="/"> Clarity </a> </p>
-                <p class="synonym"> <a href="/"> Clearness </a> </p>
-                <p class="synonym"> <a href="/"> Explicitness </a> </p>
-                <p class="synonym"> <a href="/"> Simplicity </a> </p>
-                <p class="synonym"> <a href="/"> Plainness </a> </p>
+                <p class="synonym"> <a href="/not-found"> Comprehensibility </a> </p>
+                <p class="synonym"> <a href="/not-found"> Intelligibility </a> </p>
+                <p class="synonym"> <a href="/not-found"> Understandability </a> </p>
+                <p class="synonym"> <a href="/not-found"> Approachability </a> </p>
+                <p class="synonym"> <a href="/not-found"> Penetrability </a> </p>
+                <p class="synonym"> <a href="/not-found"> User-friendliness </a> </p>
+                <p class="synonym"> <a href="/not-found"> Ease of Understanding </a> </p>
+                <p class="synonym"> <a href="/not-found"> Coherence </a> </p>
+                <p class="synonym"> <a href="/not-found"> Clarity </a> </p>
+                <p class="synonym"> <a href="/not-found"> Clearness </a> </p>
+                <p class="synonym"> <a href="/not-found"> Explicitness </a> </p>
+                <p class="synonym"> <a href="/not-found"> Simplicity </a> </p>
+                <p class="synonym"> <a href="/not-found"> Plainness </a> </p>
               </div>
   
               <p class="italicize"> “Part of Gilpin's appeal lay in the accessibility of his theories. The picturesque, as discussed in his writings, was easy to understand and to imitate.” </p>
@@ -164,17 +164,17 @@
               <p> The quality of being friendly or easily approached when needed </p>
   
               <div class="row synonyms-list">
-                <p class="synonym"> <a href="/"> Friendliness </a> </p>
-                <p class="synonym"> <a href="/"> Openness </a> </p>
-                <p class="synonym"> <a href="/"> Cordiality </a> </p>
-                <p class="synonym"> <a href="/"> Approachability </a> </p>
-                <p class="synonym"> <a href="/"> Affability </a> </p>
-                <p class="synonym"> <a href="/"> Congeniality </a> </p>
-                <p class="synonym"> <a href="/"> Agreeableness </a> </p>
-                <p class="synonym"> <a href="/"> Informality </a> </p>
-                <p class="synonym"> <a href="/"> Availability </a> </p>
-                <p class="synonym"> <a href="/"> Receptiveness </a> </p>
-                <p class="synonym"> <a href="/"> Conversableness </a> </p>
+                <p class="synonym"> <a href="/not-found"> Friendliness </a> </p>
+                <p class="synonym"> <a href="/not-found"> Openness </a> </p>
+                <p class="synonym"> <a href="/not-found"> Cordiality </a> </p>
+                <p class="synonym"> <a href="/not-found"> Approachability </a> </p>
+                <p class="synonym"> <a href="/not-found"> Affability </a> </p>
+                <p class="synonym"> <a href="/not-found"> Congeniality </a> </p>
+                <p class="synonym"> <a href="/not-found"> Agreeableness </a> </p>
+                <p class="synonym"> <a href="/not-found"> Informality </a> </p>
+                <p class="synonym"> <a href="/not-found"> Availability </a> </p>
+                <p class="synonym"> <a href="/not-found"> Receptiveness </a> </p>
+                <p class="synonym"> <a href="/not-found"> Conversableness </a> </p>
               </div>
   
               <p class="italicize"> “Rather, she was a warm, plainspoken, down-to-earth woman, who was notable for her accessibility to students.” </p>
@@ -188,19 +188,19 @@
               <p> The state of being receptive to suggestion or new ideas </p>
   
               <div class="row synonyms-list">
-                <p class="synonym"> <a href="/"> Receptivity </a> </p>
-                <p class="synonym"> <a href="/"> Openness </a> </p>
-                <p class="synonym"> <a href="/"> Approachability </a> </p>
-                <p class="synonym"> <a href="/"> Tolerance </a> </p>
-                <p class="synonym"> <a href="/"> Impartiality </a> </p>
-                <p class="synonym"> <a href="/"> Responsiveness </a> </p>
-                <p class="synonym"> <a href="/"> Receptiveness </a> </p>
-                <p class="synonym"> <a href="/"> Acceptance </a> </p>
-                <p class="synonym"> <a href="/"> Observance </a> </p>
-                <p class="synonym"> <a href="/"> Understanding </a> </p>
-                <p class="synonym"> <a href="/"> Friendliness </a> </p>
-                <p class="synonym"> <a href="/"> Interest </a> </p>
-                <p class="synonym"> <a href="/"> Broad-Mindedness </a> </p>
+                <p class="synonym"> <a href="/not-found"> Receptivity </a> </p>
+                <p class="synonym"> <a href="/not-found"> Openness </a> </p>
+                <p class="synonym"> <a href="/not-found"> Approachability </a> </p>
+                <p class="synonym"> <a href="/not-found"> Tolerance </a> </p>
+                <p class="synonym"> <a href="/not-found"> Impartiality </a> </p>
+                <p class="synonym"> <a href="/not-found"> Responsiveness </a> </p>
+                <p class="synonym"> <a href="/not-found"> Receptiveness </a> </p>
+                <p class="synonym"> <a href="/not-found"> Acceptance </a> </p>
+                <p class="synonym"> <a href="/not-found"> Observance </a> </p>
+                <p class="synonym"> <a href="/not-found"> Understanding </a> </p>
+                <p class="synonym"> <a href="/not-found"> Friendliness </a> </p>
+                <p class="synonym"> <a href="/not-found"> Interest </a> </p>
+                <p class="synonym"> <a href="/not-found"> Broad-Mindedness </a> </p>
               </div> -->
   
               <!-- <p class="italicize"> “Rather, she was a warm, plainspoken, down-to-earth woman, who was notable for her accessibility to students.” </p> -->
@@ -213,21 +213,21 @@
               <ul class="related-list">
                 <li>
                   <u>
-                    <a href="/">
+                    <a href="/not-found">
                       Access
                     </a>
                   </u>
                 </li>
                 <li>
                   <u>
-                    <a href="/">
+                    <a href="/not-found">
                       Accessor
                     </a>
                   </u>
                 </li>
                 <li>
                   <u>
-                    <a href="/">
+                    <a href="/not-found">
                       Accessible
                     </a>
                   </u>
