--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class="row inputs">
             <div class="relative">
               <div class="row dropdown">
-                <input value="Synonyms" onfocus="showSynonyms()" onblur="hideSynonyms()" readonly>
+                <input value="Synonyms" onfocus="showSynonyms()" onblur="hideSynonyms()" readonly aria-label="dropdown menu for search options">
                 <i class="fa fa-caret-down right"></i>
               </div>
 
@@ -51,7 +51,7 @@
 
             <div class="relative">
               <div class="row dropdown">
-                <input value="Accessibility" onfocus="showOptions()" onblur="hideOptions()">
+                <input value="Accessibility" onfocus="showOptions()" onblur="hideOptions()" aria-label="search bar for synonyms">
                 <i class="fa fa-search"></i>
               </div>
 
